<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/institute_card"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        style="@style/DefaultCardListItem">

    <ImageView
            android:id="@+id/substrate_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/icst_texture"
            android:scaleType="centerCrop"
            android:transitionName="selectedInstitute"
            android:contentDescription="@string/image_description_institute_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/institute_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
                android:id="@+id/institute_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/institute_iimet"
                android:textSize="24sp"
                android:textColor="@color/colorWhite"
                android:maxLines="4"
                android:ellipsize="end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/institute_programs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/study_programs_valued"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>