<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DefaultCardListItem">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/person_photo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/placeholder_profile_photo"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_description_profile_photo"
                />

        <TextView
                android:id="@+id/person_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                tools:text="Итс Татьяна Александровна"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/person_photo"
                style="@style/CardTitle"
                />

        <TextView
                android:id="@+id/person_responses_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/persons_responsibilities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_photo"
                style="@style/CardMedium"
                />

        <TextView
                android:id="@+id/person_response_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Директор - Институт Компьютерных Наук и Технологий"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_responses_title_text"
                style="@style/CardRegular"
                />

        <!--<TextView
                android:id="@+id/person_responses_left_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/left_valued"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_response_text"
                style="@style/CardRegular"
                />


        <TextView
                android:id="@+id/person_positions_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/persons_positions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_responses_left_text"
                style="@style/CardMedium"
                />

        <TextView
                android:id="@+id/person_position_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/position_resp_international"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_positions_title_text"
                style="@style/CardRegular"
                />

        <TextView
                android:id="@+id/person_positions_left_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/left_valued"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_position_text"
                style="@style/CardRegular"
                />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/person_url_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:letterSpacing=".01"
                android:text="@string/card_action_url"
                android:textAllCaps="false"
                app:icon="@drawable/ic_planet"
                app:iconGravity="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/person_positions_left_text" />-->

        <View
                android:id="@+id/person_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorSeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/person_response_text"
                />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/person_phone_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_action_dial"
                android:theme="@style/CardActionButton"
                app:icon="@drawable/ic_call"
                app:layout_constraintStart_toStartOf="@+id/person_photo"
                app:layout_constraintTop_toBottomOf="@+id/person_separator"
                />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/person_email_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/card_action_mail"
                android:theme="@style/CardActionButton"
                app:icon="@drawable/ic_email"
                app:layout_constraintStart_toEndOf="@+id/person_phone_button"
                app:layout_constraintTop_toBottomOf="@+id/person_separator"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>