<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/event_day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textIsSelectable="false"
        tools:text="1"
        app:layout_constraintEnd_toStartOf="@+id/event_timeline_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/event_month_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:maxLines="1"
            android:ellipsize="end"
            android:textIsSelectable="false"
            tools:text="Августа"
            app:layout_constraintEnd_toEndOf="@+id/event_day_text"
            app:layout_constraintStart_toStartOf="@+id/event_day_text"
            app:layout_constraintTop_toBottomOf="@+id/event_day_text"
    />

    <View
            android:id="@+id/event_timeline_divider_top"
            android:layout_width="4dp"
            android:layout_height="16dp"
            android:layout_marginStart="90dp"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <View
            android:id="@+id/event_timeline_divider_bottom"
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:layout_marginStart="90dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_timeline_divider_top" />

    <View
        android:id="@+id/event_timeline_circle"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:background="@drawable/timeline_event_circle_view"
        app:layout_constraintEnd_toEndOf="@id/event_timeline_divider_top"
        app:layout_constraintStart_toStartOf="@id/event_timeline_divider_top"
        app:layout_constraintTop_toTopOf="@+id/event_day_text"
    />

    <TextView
            android:id="@+id/event_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textIsSelectable="true"
            android:fontFamily="@font/roboto_medium"
            tools:text="Завершение приёма заявлений о согласии на зачисление (Первый этап)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_timeline_circle"
            app:layout_constraintTop_toTopOf="@id/event_timeline_circle"/>

    <View
            android:id="@+id/event_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:background="@color/colorSeparator"
            app:layout_constraintTop_toBottomOf="@id/event_description_text"
            app:layout_constraintEnd_toEndOf="@+id/event_description_text"
            app:layout_constraintStart_toStartOf="@+id/event_description_text"
    />

    <TextView
            android:id="@+id/event_funding_form_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:maxLines="3"
            android:ellipsize="end"
            android:textIsSelectable="false"
            tools:text="@string/funding_forms_government"
            app:layout_constraintTop_toBottomOf="@id/event_separator"
            app:layout_constraintStart_toEndOf="@+id/event_timeline_circle"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/event_education_form_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:maxLines="3"
        android:ellipsize="end"
        android:textIsSelectable="false"
        tools:text="@string/educations_form_full_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/event_funding_form_text"
        app:layout_constraintTop_toBottomOf="@+id/event_funding_form_text"
    />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/event_add_to_calendar_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:letterSpacing=".01"
            android:text="@string/add_to_calendar"
            android:textAllCaps="false"
            app:icon="@drawable/ic_event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_timeline_divider_bottom"
            app:layout_constraintTop_toBottomOf="@+id/event_education_form_text"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
